# treatsforthewicked

./: Cargo.toml  LICENSE  README.md
assets/: README.md
run_wasm/src/: index.html
src/: audio.rs  main.rs  window.rs
src/game_scene/: candyland.rs  intro.rs  load.rs  mod.rs  outro.rs  score.rs
src/game_scene/map/: bounds.rs  candy.rs  house.rs  mod.rs  npc_generic.rs  player.rs
src/graphics/: mod.rs  render.rs  texture.rs
src/graphics/shaders/: compile  fs.frag  fs.spv  vs.spv  vs.vert
