[package]
name = "treatsforthewicked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mewo = "0.1"
rand = "0.8.5"
mepeyew = "0.3"
instant = "0.1"
kira = { version = "0.8", features = ["symphonia"] }
nalgebra-glm = "0.18"
image = { version = "0.24", features = ["png", "jpeg"], default-features = false }
raw-window-handle = "0.5"
getrandom = { version = "0.2", features = ["js"] }
winit = { version = "0.28", features = ["x11", "wayland"], default-features = false }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Document", "Window", "Element"] }

[workspace]
members = [
    "run_wasm"
]

